front end almost done. Missing http calls

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -16,7 +16,7 @@ a:focus {
     margin: 20px;
 }
 
-.contact-list {
+.problem-list {
     overflow-y: auto;
     border: 1px solid #ddd;
     padding: 10px;
